电子书功能补全
